--- a/public/styles.css
+++ b/public/styles.css
@@ -122,6 +122,9 @@ nav{
   font-size: 20px;
   padding-top: 10px;
 }
+.error-message{
+    width: 80vw;
+}
   @media(max-width: 1000px){
     .input{
       height: 40px;
